update header region css to prevent incorrect alignment

--- a/sites/all/themes/the_ark/sass/layouts/_region-header.scss
+++ b/sites/all/themes/the_ark/sass/layouts/_region-header.scss
@@ -32,6 +32,8 @@
 .l-region--header {
   max-width: 320px;
   @include container(32rem);
+
+  position: relative;
 }
 
 .front {
